<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/mPrice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"

            android:text="@string/price"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mPercentChange"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"

            android:text="@string/percent_change"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mDollarChange"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"

            android:text="Change in Magnitude "
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/addCoinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_crypto" />

</LinearLayout>