<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#FFFFFF"

    app:cardCornerRadius="10dp">


    <LinearLayout
        android:id="@+id/newsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/mDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"

            android:text="@string/publishedAt"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="?android:attr/autofilledHighlight" />

        <TextView
            android:id="@+id/mTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:ems="10"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/mDescription"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"

            android:text="@string/description"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mSource"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"

            android:text="@string/source"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.v7.widget.CardView>